unpackaged/main/default/objects/User/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Users mark themselves for Availability for customer responses</description>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>