unpackaged/main/default/objects/User/fields/currentuserforlistview__c.field-meta.xml
<CustomField>
    <fullName>currentuserforlistview__c</fullName>
    <description>name to use with filters in listviews</description>
    <formula>Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>currentuserforlistview</label>
    <type>Text</type>
</CustomField>