unpackaged/main/default/objects/User/fields/Disclaimer_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the registration process whether user has accepted disclaimer.</description>
    <label>Disclaimer Accepted</label>
    <type>Checkbox</type>
</CustomField>