unpackaged/main/default/objects/User/fields/Disclaimer_Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_Accepted_At__c</fullName>
    <label>Disclaimer Accepted At</label>
    <type>DateTime</type>
</CustomField>