unpackaged/main/default/objects/User/fields/External_Provider__c.field-meta.xml
<CustomField>
    <fullName>External_Provider__c</fullName>
    <label>External Provider</label>
    <length>100</length>
    <type>Text</type>
</CustomField>