unpackaged/main/default/objects/User/fields/No_Email_for_Case_Ownership__c.field-meta.xml
<CustomField>
    <fullName>No_Email_for_Case_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Email for Case Ownership</label>
    <type>Checkbox</type>
</CustomField>