unpackaged/main/default/objects/User/fields/Receive_Task_Ready_to_Start_Emails__c.field-meta.xml
<CustomField>
    <fullName>Receive_Task_Ready_to_Start_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Task Ready to Start Emails</label>
    <type>Checkbox</type>
</CustomField>