unpackaged/main/default/objects/User/listViews/Active_Community_Users.listView-meta.xml
<ListView>
    <fullName>Active_Community_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>ADC Community</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Community Users</label>
    <sharedTo>
        <group>System_Admin</group>
    </sharedTo>
</ListView>