unpackaged/main/default/objects/User/listViews/Host_Engineering_Users.listView-meta.xml
<ListView>
    <fullName>Host_Engineering_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>contains</operation>
        <value>hosteng.com</value>
    </filters>
    <label>Host Engineering Users</label>
    <sharedTo>
        <group>System_Admin</group>
    </sharedTo>
</ListView>